# mdarray

./: .gitignore  CLAUDE.md  MDIter.py  MultiArray.py  README.md  __init__.py  depreciated_functions.py  kpm.py  ktests.py  maiter2.py  marray.py  mdArray.py  mdarray.py  mdarray_core_functions.py  mdarray_formatting.py  mdarray_functions.py  mdarray_helper.py  mdarray_indexing.py  mdarray_math.py  mdarray_types.py  mditer2.py  multiArray_.py  pyproject.toml  test2.py  test3.py  test_mditer.py  tests.py  tmp.py  toast.py
.github/workflows/: ci.yml
.mypy_cache/3.7/: ___init__.data.json  ___init__.meta.json  __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  _random.data.json  _random.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  cmath.data.json  cmath.meta.json  codecs.data.json  codecs.meta.json  (+48 more)
core/: __init__.py  creation.py  exceptions.py  formatting.py  helper.py  indexing.py  logic.py  manipulation.py  math.py  padding.py  reduction.py  types.py
fft/: __init__.py  fft.py
iterators/: creation_manipulation.py
jnk?/: tmp.py  wrap.py
linalg/: __init__.py  math.py  matrix.py
mdarray_core/: __init__.py  creation.py  depreciated_functions.py  formatting.py  functions.py  helper.py  indexing.py  logic.py  manipulation.py  math.py
misc/: depreciated_functions.py  kpm.py  ktests.py  multiArray_.py
tests/: conftest.py  test3.py  test_creation.py  test_indexing.py  test_linalg.py  test_mditer.py  tests.py
(+121 files in other folders)
